--- a/src/main/resources/templates/bootstrap/bootstrap_nav_header.html
+++ b/src/main/resources/templates/bootstrap/bootstrap_nav_header.html
@@ -11,11 +11,11 @@
                 <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/earthquakes/search">Earthquakes</a>
+                <a class="nav-link" href="/earthquakes/search">Earthquake Search</a>
             </li>
-            <li class="nav-item">
-                    <a class="nav-link" href="/page2">Page 2</a>
-            </li>
+	    <li class="nav-item">
+                <a class="nav-link" href="/users">Users</a>
+            </li>`
         </ul>
 
         <ul class="nav navbar-nav navbar-right">
