--- a/src/main/resources/templates/bootstrap/bootstrap_nav_header.html
+++ b/src/main/resources/templates/bootstrap/bootstrap_nav_header.html
@@ -7,15 +7,15 @@
 
     <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-            <li class="nav-item active">
-                <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-            </li>
             <li class="nav-item">
                 <a class="nav-link" href="/earthquakes/search">Earthquake Search</a>
             </li>
-	    <li class="nav-item">
+            <li class="nav-item">
+                <a class="nav-link" href="/locations/search">Locations</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="/users">Users</a>
-            </li>`
+            </li>
         </ul>
 
         <ul class="nav navbar-nav navbar-right">
