ys - added lat lon loc and fixed search.html & results.html and also EarthquakeQuerySerivce.java

--- a/src/main/resources/templates/earthquakes/search.html
+++ b/src/main/resources/templates/earthquakes/search.html
@@ -9,21 +9,33 @@
       <div th:replace="bootstrap/bootstrap_nav_header.html"></div>
 
       <h1>Earthquake Search</h1>
+	<form action="#" th:action="@{/earthquakes/results}" th:object="${eqSearch}" method="get">
+            <table>
+                <tr class="form-group">
+                    <th><label for="distance" class="col-form-label">Distance (km)</label></th>
+                    <td><input type="number" th:field="*{distance}" class="form-control" id="distance" /></td>
+                </tr>
+                <tr class="form-group">
+                    <th><label for="minmag" class="col-form-label">Minimum Magnitude</label></th>
+                    <td><input type="number" th:field="*{minmag}" class="form-control" id="minmag" /></td>
+                </tr>
+                <tr class="form-group">
+                    <th><label for="distance" class="col-form-label">Latitude</label></th>
+                    <td><input type="number" step="any" th:field="*{lat}" class="form-control" id="lat" /></td>
+                </tr>
+                <tr class="form-group">
+                    <th><label for="distance" class="col-form-label">Longitude</label></th>
+                    <td><input type="number" step="any" th:field="*{lon}" class="form-control" id="lon" /></td>
+                </tr>
+                <tr class="form-group">
+                    <th><label for="distance" class="col-form-label">Location</label></th>
+                    <td><input type="text" th:field="*{location}" class="form-control" id="location" /></td>
+                </tr>
+            </table>
 
-      <form action="#" th:action="@{/earthquakes/results}" th:object="${eqSearch}" method="get">
-                 <table>
-                     <tr class="form-group">
-                         <th><label for="distance" class="col-form-label">Distance (km)</label></th>
-                         <td><input type="number" th:field="*{distance}" class="form-control" id="distance"></td>
-                     </tr>
-                     <tr class="form-group">
-                         <th><label for="minmag" class="col-form-label">Minimum Magnitude</label></th>
-                         <td><input type="number" th:field="*{minmag}" class="form-control" id="minmag"></td>
-                     </tr>
-                 </table>
-     
-                 <input type="submit" class="btn btn-primary" value="Search">
-             </form>
+            <input type="submit" class="btn btn-primary" value="Search" />
+       	</form>
+
 
       <div th:replace="bootstrap/bootstrap_footer.html"></div>
     </div>
