--- a/src/main/resources/templates/earthquakes/results.html
+++ b/src/main/resources/templates/earthquakes/results.html
@@ -10,53 +10,51 @@
 
       <h1>Earthquake Search Results</h1>
 
-      <table class="table">
-	      <thead>
-		      <tr>
-			      <th>URL</th>
-			      <th>Count</th>
-			      <th>Distance (km)</th>
-			      <th>Minimum Magnitude</th>
-			      <th>Location</th>
-			      <th>Latitude</th>
-			      <th>Longitude</th>
-		      </tr>
-	      </thead>
-	      <tbody>
-		      <tr>
-			      <td th:text="${featureCollection.metadata.url}"></td>
-			      <td th:text="${featureCollection.metadata.count}"></td>
-			      <td th:text="${eqSearch.distance}"></td>
-			      <td th:text="${eqSearch.minmag}"></td>
-			      <td th:text="${eqSearch.location}"></td>
-			      <td th:text="${eqSearch.lat}"></td>
-			      <td th:text="${eqSearch.lon}"></td>
-		      </tr>
-	      </tbody>
-	</table>
-	
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Location</th>
+                    <th>Count</th>
+                    <th>Distance (km)</th>
+                    <th>Minimum Magnitude</th>
+                    <th>Latitude</th>
+                    <th>Longitude</th>
+                    <th>Location</th>
 
-	<h3>Earthquakes</h3>
-	<table class="table">
-		<thead>
-			<tr>
-				<th>title</th>
-				<th>id</th>
-				<th>place</th>
-				<th>mag</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr th:each="f: ${featureCollection.features}">
-				<td><a th:href="${f.properties.url}" th:text="${f.properties.title}"></td>
-				<td><a th:href="${f.properties.url}" th:text="${f.id}"></td>
-				<td th:text="${f.properties.place}"></td>
-				<td th:text="${f.properties.mag}"></td>
-			</tr>
-		</tbody>
-	</table>
+                    
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <!-- <td><a th:href="${featureCollection.metadata.url}" th:text="${featureCollection.metadata.title}"></a></td> -->
+                    <td th:text="${eqSearch.location}"></td>
+                    <td th:text="${featureCollection.metadata.count}"></td>
+                    <td th:text="${eqSearch.distance}"></td>
+                    <td th:text="${eqSearch.minmag}"></td>
+                    <td th:text="${eqSearch.lat}"></td>
+                    <td th:text="${eqSearch.lon}"></td>
+                    <td th:text="${eqSearch.location}"></td>
+                </tr>
+            </tbody>
+        </table>
 
-
+      <h2>Earthquakes</h2>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>id</th>
+                    <th>place</th>
+                    <th>mag</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr th:each="f: ${featureCollection.features}"> 
+                    <td><a th:href="${f.properties.url}" th:text="${f.id}"></a></td>
+                    <td th:text="${f.properties.place}"></td>
+                    <td th:text="${f.properties.mag}"></td>
+                </tr>
+            </tbody>
+        </table>
       <div th:replace="bootstrap/bootstrap_footer.html"></div>
     </div>
     <div th:replace="bootstrap/bootstrap_scripts.html"></div>
