--- a/src/main/resources/templates/earthquakes/search.html
+++ b/src/main/resources/templates/earthquakes/search.html
@@ -9,7 +9,8 @@
       <div th:replace="bootstrap/bootstrap_nav_header.html"></div>
 
       <h1>Earthquake Search</h1>
-	<form action="#" th:action="@{/earthquakes/results}" th:object="${eqSearch}" method="get">
+
+      <form action="#" th:action="@{/earthquakes/results}" th:object="${eqSearch}" method="get">
             <table>
                 <tr class="form-group">
                     <th><label for="distance" class="col-form-label">Distance (km)</label></th>
@@ -20,22 +21,21 @@
                     <td><input type="number" th:field="*{minmag}" class="form-control" id="minmag" /></td>
                 </tr>
                 <tr class="form-group">
-                    <th><label for="distance" class="col-form-label">Latitude</label></th>
-                    <td><input type="number" step="any" th:field="*{lat}" class="form-control" id="lat" /></td>
+                    <th><label for="lat" class="col-form-label">Latitude</label></th>
+                    <td><input type="number" th:field="*{lat}" class="form-control" id="lat" step="any" /></td>
                 </tr>
                 <tr class="form-group">
-                    <th><label for="distance" class="col-form-label">Longitude</label></th>
-                    <td><input type="number" step="any" th:field="*{lon}" class="form-control" id="lon" /></td>
+                    <th><label for="lon" class="col-form-label">Longitude</label></th>
+                    <td><input type="number" th:field="*{lon}" class="form-control" id="lon" step="any" /></td>
                 </tr>
                 <tr class="form-group">
-                    <th><label for="distance" class="col-form-label">Location</label></th>
-                    <td><input type="text" th:field="*{location}" class="form-control" id="location" /></td>
+                    <th><label for="location" class="col-form-label">Location</label></th>
+                    <td><input type="text" th:field="*{location}" class="form-control" id="location" name="location" value></td>
                 </tr>
             </table>
 
             <input type="submit" class="btn btn-primary" value="Search" />
-       	</form>
-
+        </form>
 
       <div th:replace="bootstrap/bootstrap_footer.html"></div>
     </div>
